--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "book_search",
   "version": "1.0.0",
+  "engines":{
+    "node": "14.x"
+  },
   "description": "",
   "main": "server/server.js",
   "scripts": {
