--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "apollo-server-express": "^2.0.2",
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
