--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "book_search",
   "version": "1.0.0",
   "engines":{
-    "node": "14.x"
+    "node": "14.16.1",
+    "npm": "7.19.1"
   },
   "description": "",
   "main": "server/server.js",
